updated hw3 file

--- a/distribute_hw3.ipynb
+++ b/distribute_hw3.ipynb
@@ -27,11 +27,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "8\n",
+      "144\n",
+      "317811\n",
+      "2178309\n"
+     ]
+    }
+   ],
    "source": [
     "def fib_recursive(n):\n",
     "    if n == 1:\n",
@@ -57,7 +70,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*your answer here*\n"
+    "**Answer:**\n",
+    "\n",
+    "      Time complexity: O(2^n)\n",
+    "      Space complexity: O(n)\n"
    ]
   },
   {
@@ -83,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -100,11 +116,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "8\n",
+      "144\n",
+      "317811\n",
+      "2178309\n"
+     ]
+    }
+   ],
    "source": [
     "for i in [1, 2, 7,13,29,33]:\n",
     "    print(fib_iterative(i))"
@@ -114,7 +143,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*your answer here*\n"
+    "**Answer:**\n",
+    "\n",
+    "        Time complexity: O(n)\n",
+    "        Space complexity: O(n)"
    ]
   },
   {
@@ -137,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 183,
    "metadata": {
     "collapsed": true
    },
@@ -157,41 +189,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 190,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "def call_counter(count_dictionary):\n",
-    "    def call_counter_decorator(func):\n",
-    "        def inner(*args, **kwargs):\n",
+    "    def call_counter_decorator(func):       \n",
+    "        def inner(*args, **kwargs): \n",
     "            name = func.__name__\n",
-    "            #your code here\n"
+    "            #your code here\n",
+    "            output=func(*args, **kwargs)\n",
+    "            \n",
+    "            if name not in count_dictionary:\n",
+    "                count_dictionary[name] = 1\n",
+    "                \n",
+    "            else:\n",
+    "                count_dictionary[name]=count_dictionary[name]+1\n",
+    "            #print(\"args, count_dictionary[name]\",*args,count_dictionary[name])\n",
+    "    \n",
+    "            return output\n",
+    "        \n",
+    "        return inner\n",
+    "        \n",
+    "    return call_counter_decorator\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 191,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": [
-    "#your code here\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 8 7\n",
+      "13 144 13\n",
+      "29 317811 29\n",
+      "33 2178309 33\n"
+     ]
+    }
+   ],
    "source": [
     "ccounter={}\n",
-    "@call_counter(ccounter)\n",
+    "\n",
+    "#@call_counter(ccounter)\n",
     "@cache\n",
+    "@call_counter(ccounter)\n",
     "def fib_recursive(n):\n",
     "    if n == 1:\n",
     "        return 0\n",
@@ -200,7 +248,7 @@
     "    return fib_recursive(n-1) + fib_recursive(n-2)\n",
     "\n",
     "for i in [7,13,29, 33]:\n",
-    "    print(i, fib_recursive(i), ccounter['fib_recursive'])"
+    "    print(i, fib_recursive(i) , ccounter['fib_recursive'])\n"
    ]
   },
   {
@@ -216,7 +264,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*your answer here*\n"
+    "**Answer:**\n",
+    "\n",
+    "         Time complexity: O(n)\n",
+    "         Space complexity: O(n)\n",
+    "In the memoized Fibonacci, fib_recursive(n)=fib_recursive(n-1)+fib_recursive(n-2), and it goes all the way to the left bottom of tree, which is f(2) and f(1), directly return f(2) and f(1),(return f(2) first) and cache them respectively. Then it gradually goes up, and after that every time when caculating fib_recursive(n-2), it does not need to go into the original fib_recursive function because it's already cached while calculating fib_recursive(n-1) on the left of the formula. Therefore, the tree is prunned and the only thing left is the leftmost stem(all the way down to the leaves) with two leaves(f(2),f(1)) at the bottom. Therefore the time complexity is O(n).\n",
+    "\n"
    ]
   },
   {
@@ -230,31 +283,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#your code here\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 192,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code here\n"
+    "#your code here\n",
+    "\n",
+    "def fib_iterative2(n):\n",
+    "    if n == 1:\n",
+    "        return 0\n",
+    "    if n == 2:\n",
+    "        return 1\n",
+    "    count=2  \n",
+    "    s1=0\n",
+    "    s2=1\n",
+    "\n",
+    "    while(count<n):\n",
+    "        temp=s1+s2\n",
+    "        s1=s2\n",
+    "        s2=temp\n",
+    "        count=count+1\n",
+    "    return s2\n",
+    "\n",
+    "#run an example\n",
+    "fib_iterative2(7) "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
-    "*your answer here*\n"
+    "**Answer: **It's enough to save only the previous two Fibonacci numbers.\n",
+    "\n",
+    "    Time complexity: O(n)\n",
+    "    Space complexity: O(1)\n"
    ]
   },
   {
@@ -278,29 +355,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 193,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 5, 6, 8, 9]"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code here\n"
+    "#your code here\n",
+    "def insertion_sort(array):\n",
+    "    for i in range(len(array)):\n",
+    "        #insert arrar[i] between array[0]-array[i]\n",
+    "        temp=array[i]\n",
+    "        j=i-1\n",
+    "        while j>=0 and array[j]>temp:\n",
+    "            array[j+1]=array[j]\n",
+    "            j=j-1\n",
+    "        array[j+1]=temp\n",
+    "    return array\n",
+    "\n",
+    "insertion_sort([5,2,1,3,8,6,9])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*your answer here*\n"
+    "**Answer:**\n",
+    "\n",
+    "      Best complexity: O(n)\n",
+    "      Worst complexity: O(n^2)\n",
+    "      Average complexity: O(n^2)\n"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [py35]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [py35]"
   },
   "language_info": {
    "codemirror_mode": {
